// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test screening outcome Container Should render screening outcome 1`] = `
<ScreeningOutcome
  submission={
    Object {
      "screening": <div>
        Screening text
      </div>,
    }
  }
>
  <SidebarBlock
    title="Screening Outcome"
  >
    <div
      className="sidebar-block"
    >
      <h5>
        Screening Outcome
      </h5>
      <div>
        Screening text
      </div>
      <div
        className="partition"
      >
         
      </div>
    </div>
  </SidebarBlock>
</ScreeningOutcome>
`;

exports[`Test screening outcome Container Should render screening outcome without outcome 1`] = `
<ScreeningOutcome
  submission={
    Object {
      "screening": null,
    }
  }
>
  <SidebarBlock
    title="Screening Outcome"
  >
    <div
      className="sidebar-block"
    >
      <h5>
        Screening Outcome
      </h5>
      Not yet screened
      <div
        className="partition"
      >
         
      </div>
    </div>
  </SidebarBlock>
</ScreeningOutcome>
`;
